1280
I have another example if it's any use:
```scala

public class Test {

  @Deprecated
  <A extends CharSequence> A foo(A a) {
      return a;
  }

  public static void main(String[] args) {
      
      System.out.println(new Test().foo("Hello, world"));
  }
}
```
```scala
gondolin ~/tmp % scalac Test.java 
Test.java:5: error: `>' expected but `extends' found.
  <A extends CharSequence> A foo(A a) {
     ^
Test.java:13: error: illegal start of type
}
^
two errors found
```

The problem goes away if the annotation is removed, or the method is marked public.

scala -version = 2.7.2.RC6
